# refuze

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  refuze.cabal  refuze.hs
app/: Main.hs  Match.hs  String.hs  Tree.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs.orig
src/Refuze/: Match.hs  String.hs  Tree.hs
test/: Spec.hs
