cabal-version:      3.0
name:               Refuze
version:            0.1.0.0
synopsis: Regex Fuzzer
license:            MIT
license-file:       LICENSE
author:             Kirk Matt
maintainer:         kirkmatt@proton.me
build-type:         Simple
description:
    Fuzzes a regex input with a string

extra-doc-files:    
    CHANGELOG.md
    README.md

extra-source-files:
    test/Spec.hs

common warnings
    ghc-options: -Wall


source-repository head
    type: git
    location: https://github.com/Th0ught09/refuze.git

library
    hs-source-dirs: src

    if impl(ghc < 8.0)
      build-depends:
        semigroups

    build-depends:    
        base ^>=4.20.0.0,
        regex-tdfa ^>=1.3.2,
        random >= 1.3,
        directory >= 0.4.2,
        process,

    exposed-modules:
        Refuze.String
        Refuze.Match
        Refuze.Tree

executable refuze
    import:           warnings

    if impl(ghc < 8.0)
      build-depends:
        semigroups
    build-depends:
        base,
        regex-tdfa,
        random,
        Refuze,
    
    default-language: Haskell2010
    main-is:          refuze.hs

test-suite refuze-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    build-depends:
        base
        , hspec
        , tasty >= 1.5.3
        , random >= 1.3
        , tasty-hunit >= 0.10.2
        , hspec-discover
        , Refuze
    ghc-options:
        -O -threaded -rtsopts -with-rtsopts=-N
    build-tool-depends:
        hspec-discover:hspec-discover
